--- a/man/byte.3
+++ b/man/byte.3
@@ -1,6 +1,6 @@
 .TH qlibs byte 3
 .SH NAME
-byte \- byte manipulation/evalution 
+byte \- byte manipulation/evaluation 
 .SH SYNTAX
 .B #include \(dqbyte.h\(dq
 
