--- a/install
+++ b/install
@@ -2,7 +2,7 @@
 
 . ./conf-build
 
-install_libs() { cp *.a *.so $OFILES "$LIBDIR" ; }
+install_libs() { cp *.a $OFILES "$LIBDIR" ; }
 install_hdrs() { cp include/*.h "$HDRDIR" ; }
 
 echo -n "Installing qlibs ..."
